# AuraSync

./: .gitignore  Dockerfile  README.md  RELEASE.md  guide.md  mkdocs.yml
.github/workflows/: cpp_ci.yml  docker.yml  hybrid_ci.yml
CppSrc/: CALIBRATION_REPORT.md  CMakeLists.txt  Dockerfile  MIXXX_COMPARATIVE_AUDIT.md  README.md  ROADMAP_2_1_0.md  analysis simon v8.json  analysis.json  analysis_SimonV7.json  atlas_analysis.json  baseline_test.ps1  fftw-3.3.5-dll64.rar  main.cpp  output_test.json  simon_analysis.json  simon_v2_analysis.json  simon_v2_restored_analysis.json  simon_v4_analysis.json  tsuki_analysis.json  tsuki_v2_analysis.json  tsuki_v2_restored_analysis.json  tsuki_v4_analysis.json  vcpkg.json
CppSrc/fftw-3.3.5-dll64/: libfftw3-3.exp
CppSrc/include/core/: AnalysisResult.h  AudioBuffer.h  IAnalysisModule.h  JsonContract.h
CppSrc/include/modules/: BPMModule.h  CueModule.h  IAnalysisModule.h  OnsetModule.h  SpectralModule.h  StructureModule.h  TonalityModule.h
CppSrc/include/pipeline/: AnalysisPipeline.h  AudioLoader.h
CppSrc/lib/fftw-3.3.5-dll64/: libfftw3-3.lib
CppSrc/lib/qm-dsp/maths/: MathUtilities.h
CppSrc/src/: main.cpp
CppSrc/src/core/: AudioBuffer.cpp  JsonContract.cpp
CppSrc/src/modules/: BPMModuleAlt.cpp  FakeBPMModule.cpp  FakeModuleOnset.cpp  RealBPMModule.cpp  RealCueModule.cpp  RealOnsetModule.cpp  RealSpectralModule.cpp  RealStructureModule.cpp  RealTonalityModule.cpp
CppSrc/src/pipeline/: AnalysisPipeline.cpp  AudioLoader.cpp
CppSrc/tests/: test_cue_synthesis.cpp  test_json_contract.cpp  test_main.cpp  test_modules.cpp  test_onset_accented.cpp  test_onset_click.cpp  test_onset_click_var_bpm.cpp  test_onset_noise_bursts.cpp  test_onset_ramp.cpp  test_onset_silence.cpp  test_pipeline.cpp  test_structure_blocks.cpp  test_structure_constant.cpp  test_tonality_aminor.cpp  test_tonality_chroma.cpp  test_tonality_cmajor.cpp
PythonSrc/: README_visualizer.md  music_analysis_visualizer.py
RustSrc/: metro.py
